--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,12 +1,6 @@
 #.readthedocs.yaml
 
-version: "2"
-
-build:
-  os: "ubuntu-22.04"
-  tools:
-    python: "3.10"
-
-python:
-  install:
-    - requirements: docs/requirements.txt
+version: 2
+sphinx:
+  # Path to your Sphinx configuration file.
+  configuration: docs/source/conf.py
