--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,18 +1,16 @@
-# .readthedocs.yaml
-# Read the Docs configuration file
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+#.readthedocs.yaml
 
-# Required
-version: 2
+version: "2"
 
-# Set the version of Python and other tools you might need
-build:
-  os: ubuntu-22.04
-  tools:
-    python: "3.12"
-
-# Build documentation in the docs/ directory with Sphinx
 sphinx:
   # Path to your Sphinx configuration file.
   configuration: docs/source/conf.py
   
+build:
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.10"
+
+python:
+  install:
+    - requirements: docs/requirements.txt
